Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTIEBRAPI VOID __stdcall BTIEBR_CmdCountWr(UINT16 countval,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdCtrlRd(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdCtrlWr(UINT16 ctrlval,SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdCurrRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdCurrWr(UINT16 addrval,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdInit(UINT16 opcode,LPUINT16 block);
BTIEBRAPI SCHNDX __stdcall BTIEBR_CmdInsert(LPUINT16 block,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdRd(LPUINT16 block,UINT32 addrval,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdRestart(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdStackClr(INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdStartRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdStartWr(UINT16 addrval,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_CmdTotalRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdTotalWr(INT32 countval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdWr(LPUINT16 block,UINT32 addrval,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_DescAddr(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_DescAlloc(HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_DescConfig(UINT32 configval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_DescConfigAll(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_DescOptRd(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_DescOptWr(UINT16 descopt,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_DescPtrRd(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_DescRd(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,LPUINT16 desc,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_DescWr(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,LPUINT16 desc,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_DllUsageCount(VOID);
BTIEBRAPI BOOL __stdcall BTIEBR_ErrorIsTaggedBC(MSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ErrorIsTaggedRT(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorResponse(UINT16 responseval,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_ErrorSync(BOOL value,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTimeout(UINT16 timeoutval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_HostComm(LPVOID lpParam,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_IsChan(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_LHubConfig(UINT32 configval,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_LHubPortExists(INT32 portnum,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_LHubPortGetCount(INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_LHubPortGetRTLink(INT32 portnum,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_LHubPortIsAvail(INT32 portnum,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_LHubPortIsAvailMask(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_LHubPortSetRTLink(INT32 rtlink,INT32 portnum,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_LHubRTLinkGetPort(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListAddr(INT32 index,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListAddrEx(INT32 index,LISTADDR listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListBlockRdEx(LPUINT16 buf,INT32 index,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListBlockWrEx(LPUINT16 buf,INT32 index,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ListClear(LISTADDR listaddr,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_ListConfig(UINT32 configval,INT32 count,UINT16 skipval,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_ListConfigEx(UINT32 configval,INT32 count,UINT16 skipval,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListDataRdEx(LPUINT16 buf,INT32 count,INT32 index,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListDataWrEx(LPUINT16 buf,INT32 count,INT32 index,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListNextRd(UINT32 listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListNextWr(UINT32 listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_ListPostRd(LISTADDR listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_ListPostWr(LISTADDR listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_ListPreRd(LISTADDR listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_ListPreWr(LISTADDR listaddr,LPUINT16 header,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListStatus(LISTADDR listaddr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsBC(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsMon(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsNotBC(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsNotMon(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsNotPlay(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsNotRT(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsNotSerial(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsPlay(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsRT(UINT16 chanflag);
BTIEBRAPI BOOL __stdcall BTIEBR_ModeIsSerial(UINT16 chanflag);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonConfigEx(UINT32 configval,UINT32 moncount,UINT16 cardnum,INT32 channum,HCORE handleval);