Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRVB.BAS

Public Declare Sub BTIEBR_CmdCountWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCountWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdCtrlRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCtrlRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_CmdCtrlWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCtrlWr@16" (ByVal ctrlval As Integer, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdCurrRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCurrRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_CmdCurrWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCurrWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTIEBR_CmdInit Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdInit@8" (ByVal opcode As Integer, ByRef block As Integer)
Public Declare Function BTIEBR_CmdInsert Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdInsert@12" (ByRef block As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdRd@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_CmdRestart Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdRestart@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTIEBR_CmdStackClr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStackClr@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdStartRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStartRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_CmdStartWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStartWr@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdTotalRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdTotalRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_CmdTotalWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdTotalWr@12" (ByVal countval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdWr@12" (ByRef block As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescAddr@24" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescAlloc Lib "BTIEBR.DLL" Alias "_BTIEBR_DescAlloc@4" (ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_DescConfig@28" (ByVal configval As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescConfigAll Lib "BTIEBR.DLL" Alias "_BTIEBR_DescConfigAll@16" (ByVal configval As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescOptRd Lib "BTIEBR.DLL" Alias "_BTIEBR_DescOptRd@24" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTIEBR_DescOptWr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescOptWr@28" (ByVal descopt As Integer, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_DescPtrRd Lib "BTIEBR.DLL" Alias "_BTIEBR_DescPtrRd@24" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescPtrWr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescPtrWr@28" (ByVal msgaddr As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescRd Lib "BTIEBR.DLL" Alias "_BTIEBR_DescRd@28" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DescWr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescWr@28" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_DllUsageCount Lib "BTIEBR.DLL" Alias "_BTIEBR_DllUsageCount@0" () As Long
Public Declare Function BTIEBR_ErrorIsTaggedBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorIsTaggedBC@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorIsTaggedRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorIsTaggedRT@24" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ErrorResponse Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorResponse@12" (ByVal responseval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_ErrorSync Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorSync@12" (ByVal value As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_ErrorTimeout Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorTimeout@12" (ByVal timeoutval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_HostComm Lib "BTIEBR.DLL" Alias "_BTIEBR_HostComm@8" (ByVal lpparam As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_IsChan Lib "BTIEBR.DLL" Alias "_BTIEBR_IsChan@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubPortExists Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortExists@12" (ByVal portnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubPortGetCount Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortGetCount@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubPortGetRTLink Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortGetRTLink@12" (ByVal portnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubPortIsAvail Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortIsAvail@12" (ByVal portnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubPortIsAvailMask Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortIsAvailMask@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubPortSetRTLink Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortSetRTLink@16" (ByVal rtlink As Long, ByVal portnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_LHubRTLinkGetPort Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubRTLinkGetPort@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListAddr@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListAddrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListAddrEx@16" (ByVal index As Long, ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListBlockRdEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListBlockRdEx@16" (ByRef buf As Integer, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListBlockWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListBlockWrEx@16" (ByRef buf As Integer, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListClear Lib "BTIEBR.DLL" Alias "_BTIEBR_ListClear@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_ListConfig@16" (ByVal configval As Long, ByVal count As Long, ByVal skipval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListConfigEx@16" (ByVal configval As Long, ByVal count As Long, ByVal skipval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListDataRdEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListDataRdEx@20" (ByRef buf As Integer, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListDataWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListDataWrEx@20" (ByRef buf As Integer, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListInit Lib "BTIEBR.DLL" Alias "_BTIEBR_ListInit@12" (ByVal listaddr As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListNextRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListNextRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ListNextWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListNextWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_ListPostRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPostRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTIEBR_ListPostWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPostWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTIEBR_ListPreRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPreRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Sub BTIEBR_ListPreWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPreWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long)
Public Declare Function BTIEBR_ListStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_ListStatus@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ModeIsBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsBC@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsMon Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsMon@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsNotBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotBC@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsNotMon Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotMon@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsNotPlay Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotPlay@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsNotRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotRT@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsNotSerial Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotSerial@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsPlay Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsPlay@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsRT@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_ModeIsSerial Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsSerial@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTIEBR_MonConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MonConfigEx@20" (ByVal configval As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
